--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,37 @@
+:root{
+  --Background_dark: hsl(230, 17%, 14%);
+  --BackgroundTop_dark: hsl(232, 19%, 15%);
+  --BackgroundCar_dark: hsl(228, 28%, 20%);
+  --TextSub_dark: hsl(228, 34%, 66%);
+  --Text_dark: hsl(0, 0%, 100%);
+
+  --Background_white: hsl(0, 0%, 100%);
+  --BackgroundTop_white: hsl(225, 100%, 98%);
+  --BackgroundCar_white: hsl(227, 47%, 96%);
+  --TextSub_white: hsl(228, 12%, 44%);
+  --Text_white: hsl(230, 17%, 14%);
+}
+html {
+  /* 1rem = 10px */
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.6rem;
+  padding: 0;
+  margin: 0rem;
+}
 html,
 body {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
 }
-
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
